--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=2560,1377
+Size=1080,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene2D tree]
-Pos=0,65
-Size=347,1015
+Pos=0,43
+Size=145,522
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,1082
-Size=505,241
+Pos=0,567
+Size=213,124
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=507,1082
-Size=2053,241
+Pos=215,567
+Size=865,124
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=2213,65
-Size=347,1015
+Pos=733,43
+Size=347,522
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=349,65
-Size=1862,1015
+Pos=147,43
+Size=584,522
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=507,1082
-Size=2053,241
+Pos=215,567
+Size=865,124
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,1325
-Size=2560,52
+Pos=0,693
+Size=1080,27
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -56,8 +56,8 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=349,65
-Size=1862,1015
+Pos=147,43
+Size=584,522
 Collapsed=0
 DockId=0x00000001,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=2560,45
+Size=1080,23
 Collapsed=0
 DockId=0x0000000B
 
@@ -106,24 +106,24 @@ Size=700,425
 Collapsed=0
 
 [Window][Engine settings##Engine]
-Pos=190,147
+Pos=191,149
 Size=700,425
 Collapsed=0
 
 [Window][MiniMenu##Engine]
-Pos=190,511
+Pos=191,513
 Size=700,61
 Collapsed=0
 DockId=0x00000014
 
 [Window][SideTabs##Engine]
-Pos=190,165
+Pos=191,167
 Size=149,344
 Collapsed=0
 DockId=0x00000011
 
 [Window][MainSettingsView##Engine]
-Pos=341,165
+Pos=342,167
 Size=549,344
 Collapsed=0
 DockId=0x0000000E
@@ -176,25 +176,20 @@ Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Components]
-Pos=2222,184
-Size=347,1015
+Pos=742,162
+Size=347,522
 Collapsed=0
 DockId=0x9F6C4150,0
 
 [Window][Systems]
-Pos=2222,184
-Size=347,1015
+Pos=742,162
+Size=347,522
 Collapsed=0
 DockId=0x9F6C4150,1
 
-[Window][Add layer]
-Pos=365,185
-Size=350,350
-Collapsed=0
-
 [Docking][Data]
 DockSpace           ID=0x085D2BD9 Pos=235,66 Size=645,436 CentralNode=1 Selected=0x2B2EBA78
-DockSpace           ID=0x1F304E58 Window=0xFE8C7A15 Pos=190,165 Size=700,407 Split=Y
+DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
   DockNode          ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode        ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
     DockNode        ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
@@ -203,20 +198,20 @@ DockSpace           ID=0x1F304E58 Window=0xFE8C7A15 Pos=190,165 Size=700,407 Spl
         DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode      ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode          ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace           ID=0x9F6C4150 Window=0xF8AAECE4 Pos=2222,184 Size=347,1015 CentralNode=1 Selected=0xA115F62D
+DockSpace           ID=0x9F6C4150 Window=0xF8AAECE4 Pos=742,162 Size=347,522 CentralNode=1 Selected=0xA115F62D
 DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode        ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
   DockNode          ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 Split=Y
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
       DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
-        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=347,957 Selected=0x3EECD7B2
-        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=2211,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1862,970 CentralNode=1 Selected=0x772F22E0
+        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=145,957 Selected=0x3EECD7B2
+        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=933,957 Split=X
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=584,970 CentralNode=1 Selected=0xEC9B321F
           DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=347,970 Selected=0xF02CD328
       DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
