--- a/imgui.ini
+++ b/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,65
-Size=379,907
+Size=524,894
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,974
-Size=505,349
+Pos=0,961
+Size=505,362
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=507,974
-Size=2053,349
+Pos=507,961
+Size=2053,362
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=2266,65
-Size=294,907
+Pos=2265,65
+Size=295,894
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=381,65
-Size=1883,907
+Pos=526,65
+Size=1737,894
 Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Log]
-Pos=507,974
-Size=2053,349
+Pos=507,961
+Size=2053,362
 Collapsed=0
 DockId=0x00000009,1
 
@@ -56,8 +56,8 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=381,65
-Size=1883,907
+Pos=526,65
+Size=1737,894
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -176,8 +176,8 @@ Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Components]
-Pos=2275,189
-Size=294,907
+Pos=965,167
+Size=124,460
 Collapsed=0
 DockId=0x9F6C4150,0
 
@@ -324,7 +324,7 @@ DockSpace               ID=0x1F304E58 Pos=932,494 Size=700,407 Split=Y
       DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode              ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
 DockSpace               ID=0x353BF52F Pos=1531,83 Size=212,955 CentralNode=1 Selected=0xAD2E1078
-DockSpace               ID=0x9F6C4150 Pos=2275,189 Size=294,907 CentralNode=1 Selected=0xA115F62D
+DockSpace               ID=0x9F6C4150 Pos=965,167 Size=124,460 CentralNode=1 Selected=0xA115F62D
 DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode              ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
@@ -334,17 +334,17 @@ DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 
   DockNode              ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode              ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode            ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,907 Split=X
-        DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=379,957 Selected=0x3EECD7B2
-        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=2179,957 Split=X
-          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1883,970 Split=X Selected=0xEC9B321F
+      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,460 Split=X
+        DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=221,957 Selected=0x3EECD7B2
+        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=857,957 Split=X
+          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=731,970 Split=X Selected=0xEC9B321F
             DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=172,1015 Selected=0x289D2C3F
             DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1420,1015 Split=X Selected=0xEC9B321F
               DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=318,1015 CentralNode=1 Selected=0x772F22E0
               DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=212,1015 Selected=0xF3BD85C8
-          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=294,970 Selected=0xF02CD328
-      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,349 Split=X Selected=0x6D97690D
+          DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=124,970 Selected=0xF02CD328
+      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,186 Split=X Selected=0x6D97690D
         DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode            ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
